--- a/src/main/java/Ventanas/Mostrar.form
+++ b/src/main/java/Ventanas/Mostrar.form
@@ -42,7 +42,7 @@
                   <Component id="jComboBox1" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="content" max="32767" attributes="0"/>
+              <Component id="content" min="-2" pref="323" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -84,6 +84,11 @@
       </AuxValues>
     </Component>
     <Container class="javax.swing.JPanel" name="content">
+      <Properties>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[550, 328]"/>
+        </Property>
+      </Properties>
 
       <Layout>
         <DimensionLayout dim="0">
@@ -93,7 +98,7 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="317" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="323" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
