--- a/src/main/java/Ventanas/PorteroMostrar.form
+++ b/src/main/java/Ventanas/PorteroMostrar.form
@@ -67,7 +67,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="Tabla_portero">
+        <Component class="javax.swing.JTable" name="Tabla_rep">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="6" rowCount="4">
