--- a/src/main/java/Ventanas/Registrar.form
+++ b/src/main/java/Ventanas/Registrar.form
@@ -42,7 +42,7 @@
                   <Component id="jComboBox1" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="content" min="-2" max="-2" attributes="0"/>
+              <Component id="content" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
